[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/entities/van_letter.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/player.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/nokia-fc.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sounds/letter_destroyed.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/images/van.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/select_letter.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/fail.ogg" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 13, 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 13, 0, 13, 9 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1.5, 5 )

[node name="Player" type="Area2D"]
scale = Vector2( 10, 10 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 0 )
frames = SubResource( 3 )
animation = "idle"
playing = true
centered = false

[node name="VanLetter" type="Label" parent="."]
anchor_left = 0.738095
anchor_top = 0.416667
anchor_right = 0.821429
anchor_bottom = 0.583333
margin_right = 7.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VanLetterBG" type="Label" parent="."]
anchor_left = 0.738095
anchor_top = 0.416667
anchor_right = 0.821429
anchor_bottom = 0.583333
margin_top = 3.0
margin_right = 7.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
custom_fonts/font = ExtResource( 3 )
text = "_"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.5, 5 )
shape = SubResource( 5 )

[node name="SelectLetterAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -24.0
mix_target = 2
bus = "Sfx"

[node name="LetterDestroyedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -24.0
mix_target = 2
bus = "Sfx"

[node name="GameOverAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -24.0
bus = "Music"

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
